# subterranean-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Claude.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  targets.json
docs/: adapters.md  cloud-quickstart.md  cloud.md  evaluation.md  faq.md  index.md  ir-spec.md  quickstart.md  training.md  troubleshooting.md
examples/insurance_claims/: README.md  flowchart.yaml
examples/langgraph_demo/: README.md  demo.py
examples/travel_booking/: README.md  flowchart.yaml
examples/zoom_support/: README.md  flowchart.yaml
src/agent2model/: __init__.py  cli.py  exceptions.py
src/agent2model/adapters/: crewai.py  langgraph.py
src/agent2model/cloud/: README.md  __init__.py  _costs.py  _modal_serve.py  _recipes.py  doctor.py  modal_app.py  modal_app_constants.py  setup.py
src/agent2model/cloud/runpod/: README.md  serve.json  setup.sh  train_3b.json  train_8b.json
src/agent2model/eval/: baselines.py  judge.py  report.py  rubric.py  runner.py  simulator.py
src/agent2model/generation/: generator.py  scenarios.py  traversal.py
src/agent2model/ir/: __init__.py  loader.py  schema.py  validator.py
src/agent2model/serve/: vllm_server.py
src/agent2model/training/: __init__.py  _entry.py  config.py  launch.py  trainer.py
src/agent2model/training/deepspeed/: __init__.py
src/subterranean/: __init__.py  cli.py  exceptions.py  logging.py
src/subterranean/adapters/: __init__.py  crewai.py  langgraph.py
src/subterranean/cloud/: README.md  _costs.py  _recipes.py  modal_app.py  modal_app_constants.py
src/subterranean/cloud/runpod/: README.md  serve.json  setup.sh  train_3b.json  train_8b.json
src/subterranean/eval/: __init__.py  baselines.py  judge.py  report.py  rubric.py  runner.py  simulator.py
src/subterranean/generation/: __init__.py  formatter.py  generator.py  scenarios.py  traversal.py
src/subterranean/ir/: __init__.py  loader.py  schema.py  validator.py
src/subterranean/serve/: __init__.py  vllm_server.py
src/subterranean/training/: __init__.py  config.py  launch.py  trainer.py
src/subterranean/training/deepspeed/: __init__.py  zero3.json
tests/: conftest.py
tests/e2e/: __init__.py  regression.py  test_reproductions.py
tests/unit/: test_adapters.py  test_cli.py  test_cloud.py  test_cloud_doctor.py  test_cloud_setup.py  test_cost_estimate.py  test_eval.py  test_eval_judge.py  test_eval_stats.py  test_generation.py  test_ir.py  test_regression_gate.py  test_serve.py  test_training.py
