[build-system]
# >=1.27 is required for PEP 639 `license`/`license-files` (Metadata 2.4);
# older hatchling emits metadata PyPI rejects.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent2model"
dynamic = ["version"]
description = "Turn your LangGraph agent into a small fine-tuned model that runs with no orchestrator - near-frontier quality at a fraction of the inference cost."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Kamal Gurbanov", email = "kamalgurbanov916@gmail.com" }]
maintainers = [{ name = "Kamal Gurbanov", email = "kamalgurbanov916@gmail.com" }]
keywords = ["agent", "llm", "fine-tuning", "distillation", "langgraph", "crewai", "small-models", "inference-cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "anthropic>=0.40",
    "scipy>=1.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
train = [
    "torch>=2.3",
    "transformers>=4.44",
    "trl>=0.9",
    "datasets>=2.20",
    "accelerate>=0.33",
    "deepspeed>=0.14",
    "bitsandbytes>=0.43",
]
cloud = [
    "modal>=0.64",
]
serve = [
    "vllm>=0.5",
]
langgraph = [
    # Optional: only needed to compile FROM a LangGraph `.py` graph
    # (`agent2model compile graph.py`). Pure-YAML flowcharts need nothing here.
    "langgraph>=0.2",
]
eval = [
    # Everything the full eval harness can use: the PDF report (matplotlib),
    # the OpenAI-compatible client for a served/compiled condition, and the
    # LangGraph orchestrator baseline.
    "matplotlib>=3.8",
    "openai>=1.40",
    "langgraph>=0.2",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
report = [
    # PDF eval report rendering (bar charts + cost breakdown). Imported lazily so
    # the eval modules import and unit-test without it installed.
    "matplotlib>=3.8",
]
openai = [
    # OpenAI-compatible client for talking to a served compiled model and the
    # optional GPT-4 judge. Imported lazily; not required for unit tests.
    "openai>=1.40",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "commitizen>=3.27",
    "langgraph>=0.2",
]

[project.scripts]
agent2model = "agent2model.cli:app"

[project.urls]
Homepage = "https://github.com/kamaalg/agent2model"
Documentation = "https://kamaalg.github.io/agent2model"
Repository = "https://github.com/kamaalg/agent2model"
Issues = "https://github.com/kamaalg/agent2model/issues"
Changelog = "https://github.com/kamaalg/agent2model/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/agent2model/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent2model"]

# Ship the paper-example flowcharts inside the wheel so the bundled recipes and
# `reproduce_*` entrypoints work for a pip-installed user (no repo checkout).
[tool.hatch.build.targets.wheel.force-include]
"examples" = "agent2model/_examples"

[tool.hatch.build.targets.sdist]
include = [
    "src/agent2model",
    "examples",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]  # line length handled by black/formatter

[tool.ruff.lint.isort]
known-first-party = ["agent2model"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src/agent2model"]

[[tool.mypy.overrides]]
# Optional-extra deps that ship no/poor stubs; only imported behind extras.
module = [
    "trl.*",
    "transformers.*",
    "datasets.*",
    "accelerate.*",
    "deepspeed.*",
    "vllm.*",
    "langgraph.*",
    "torch.*",
    "matplotlib.*",
    "openai.*",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Modal ships its own stubs which over-constrain the public surface (e.g.
# requires PurePosixPath keys for ``volumes``). Treat the whole modal namespace
# as ``Any`` so the call sites stay readable; the Modal app is exercised by
# integration not unit tests anyway.
module = ["modal.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits the real Anthropic API with a tiny budget (nightly CI)",
    "e2e: full pipeline reproduction (release candidates)",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["agent2model"]
branch = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["src/agent2model/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true
